--- a/public/styles.css
+++ b/public/styles.css
@@ -7,3 +7,8 @@
   background-color: #292626; /* Accent color */
   color: #f8f6f6; /* Primary color */
 }
+
+#mobile-nav {
+  transition: max-height 0.3s ease-in-out;
+  overflow: hidden; /* Prevents content from overflowing during animation */
+}
