--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .accordion-collapse {
   transition: none !important; /* Disable fade-in/fade-out animations */
   visibility: visible !important; /* Keep the content visible */
